packages/drolta/drolta-0.1.0.tar.gz/drolta-0.1.0/src/drolta/parsing/DroltaParser.py
# Generated from ./src/drolta/Drolta.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO



class DroltaParser(Parser):
    grammarFileName = "Drolta.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "';'",
        "'.'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'::'",
        "','",
        "'FIND'",
        "'WHERE'",
        "'OR'",
        "'AND'",
        "'NOT'",
        "'LIMIT'",
        "'BY'",
        "'IN'",
        "'ORDER'",
        "'GROUP'",
        "'USING'",
        "'DEFINE'",
        "'ALIAS'",
        "'AS'",
        "'='",
        "'!='",
        "'<='",
        "'<'",
        "'>='",
        "'>'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'NULL'",
    ]

    symbolicNames = [
        "<INVALID>",
        "S_COL",
        "DOT",
        "OPEN_PAR",
        "CLOSE_PAR",
        "BRACKET_L",
        "BRACKET_R",
        "DBL_COL",
        "COMMA",
        "FIND",
        "WHERE",
        "OR",
        "AND",
        "NOT",
        "LIMIT",
        "BY",
        "IN",
        "ORDER",
        "GROUP",
        "USING",
        "DEFINE",
        "ALIAS",
        "AS",
        "EQ",
        "NEQ",
        "LTE",
        "LT",
        "GTE",
        "GT",
        "VARIABLE",
        "IDENTIFIER",
        "BOOLEAN_LITERAL",
        "NULL",
        "INT_LITERAL",
        "FLOAT_LITERAL",
        "STRING_LITERAL",
        "SINGLE_LINE_COMMENT",
        "MULTILINE_COMMENT",
        "WHITESPACE",
    ]

    RULE_prog = 0
    RULE_prog_statement = 1
    RULE_alias_declaration = 2
    RULE_rule_declaration = 3
    RULE_define_clause = 4
    RULE_query = 5
    RULE_find_clause = 6
    RULE_where_clause = 7
    RULE_post_processing_statements = 8
    RULE_order_by_statement = 9
    RULE_group_by_statement = 10
    RULE_limit_statement = 11
    RULE_where_statement = 12
    RULE_filter_statement = 13
    RULE_atom_list = 14
    RULE_comparison_operator = 15
    RULE_predicate_statement = 16
    RULE_predicate_param = 17
    RULE_atom = 18

    ruleNames = [
        "prog",
        "prog_statement",
        "alias_declaration",
        "rule_declaration",
        "define_clause",
        "query",
        "find_clause",
        "where_clause",
        "post_processing_statements",
        "order_by_statement",
        "group_by_statement",
        "limit_statement",
        "where_statement",
        "filter_statement",
        "atom_list",
        "comparison_operator",
        "predicate_statement",
        "predicate_param",
        "atom",
    ]

    EOF = Token.EOF
    S_COL = 1
    DOT = 2
    OPEN_PAR = 3
    CLOSE_PAR = 4
    BRACKET_L = 5
    BRACKET_R = 6
    DBL_COL = 7
    COMMA = 8
    FIND = 9
    WHERE = 10
    OR = 11
    AND = 12
    NOT = 13
    LIMIT = 14
    BY = 15
    IN = 16
    ORDER = 17
    GROUP = 18
    USING = 19
    DEFINE = 20
    ALIAS = 21
    AS = 22
    EQ = 23
    NEQ = 24
    LTE = 25
    LT = 26
    GTE = 27
    GT = 28
    VARIABLE = 29
    IDENTIFIER = 30
    BOOLEAN_LITERAL = 31
    NULL = 32
    INT_LITERAL = 33
    FLOAT_LITERAL = 34
    STRING_LITERAL = 35
    SINGLE_LINE_COMMENT = 36
    MULTILINE_COMMENT = 37
    WHITESPACE = 38

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DroltaParser.EOF, 0)

        def prog_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Prog_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Prog_statementContext, i)

        def S_COL(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.S_COL)
            else:
                return self.getToken(DroltaParser.S_COL, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

    def prog(self):
        localctx = DroltaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 3146240) != 0:
                self.state = 38
                self.prog_statement()
                self.state = 39
                self.match(DroltaParser.S_COL)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(DroltaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Prog_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alias_declaration(self):
            return self.getTypedRuleContext(DroltaParser.Alias_declarationContext, 0)

        def rule_declaration(self):
            return self.getTypedRuleContext(DroltaParser.Rule_declarationContext, 0)

        def query(self):
            return self.getTypedRuleContext(DroltaParser.QueryContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_prog_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg_statement"):
                listener.enterProg_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg_statement"):
                listener.exitProg_statement(self)

    def prog_statement(self):
        localctx = DroltaParser.Prog_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.alias_declaration()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.rule_declaration()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.query()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Alias_declarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.original = None  # Token
            self.alias = None  # Token

        def ALIAS(self):
            return self.getToken(DroltaParser.ALIAS, 0)

        def AS(self):
            return self.getToken(DroltaParser.AS, 0)

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.IDENTIFIER)
            else:
                return self.getToken(DroltaParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_alias_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAlias_declaration"):
                listener.enterAlias_declaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAlias_declaration"):
                listener.exitAlias_declaration(self)

    def alias_declaration(self):
        localctx = DroltaParser.Alias_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_alias_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(DroltaParser.ALIAS)
            self.state = 54
            localctx.original = self.match(DroltaParser.IDENTIFIER)
            self.state = 55
            self.match(DroltaParser.AS)
            self.state = 56
            localctx.alias = self.match(DroltaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_declarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define_clause(self):
            return self.getTypedRuleContext(DroltaParser.Define_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_rule_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_declaration"):
                listener.enterRule_declaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_declaration"):
                listener.exitRule_declaration(self)

    def rule_declaration(self):
        localctx = DroltaParser.Rule_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.define_clause()
            self.state = 59
            self.where_clause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(DroltaParser.DEFINE, 0)

        def IDENTIFIER(self):
            return self.getToken(DroltaParser.IDENTIFIER, 0)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def VARIABLE(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.VARIABLE)
            else:
                return self.getToken(DroltaParser.VARIABLE, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_define_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDefine_clause"):
                listener.enterDefine_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDefine_clause"):
                listener.exitDefine_clause(self)

    def define_clause(self):
        localctx = DroltaParser.Define_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_define_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(DroltaParser.DEFINE)
            self.state = 62
            self.match(DroltaParser.IDENTIFIER)
            self.state = 63
            self.match(DroltaParser.OPEN_PAR)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 29:
                self.state = 64
                self.match(DroltaParser.VARIABLE)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 8:
                    self.state = 65
                    self.match(DroltaParser.COMMA)
                    self.state = 66
                    self.match(DroltaParser.VARIABLE)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 74
            self.match(DroltaParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def find_clause(self):
            return self.getTypedRuleContext(DroltaParser.Find_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def post_processing_statements(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    DroltaParser.Post_processing_statementsContext
                )
            else:
                return self.getTypedRuleContext(
                    DroltaParser.Post_processing_statementsContext, i
                )

        def getRuleIndex(self):
            return DroltaParser.RULE_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuery"):
                listener.enterQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuery"):
                listener.exitQuery(self)

    def query(self):
        localctx = DroltaParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_query)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.find_clause()
            self.state = 77
            self.where_clause()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 409600) != 0:
                self.state = 78
                self.post_processing_statements()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Find_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(DroltaParser.FIND, 0)

        def VARIABLE(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.VARIABLE)
            else:
                return self.getToken(DroltaParser.VARIABLE, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_find_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFind_clause"):
                listener.enterFind_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFind_clause"):
                listener.exitFind_clause(self)

    def find_clause(self):
        localctx = DroltaParser.Find_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_find_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DroltaParser.FIND)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 29:
                self.state = 85
                self.match(DroltaParser.VARIABLE)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 8:
                    self.state = 86
                    self.match(DroltaParser.COMMA)
                    self.state = 87
                    self.match(DroltaParser.VARIABLE)
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DroltaParser.WHERE, 0)

        def where_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Where_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Where_statementContext, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_where_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhere_clause"):
                listener.enterWhere_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhere_clause"):
                listener.exitWhere_clause(self)

    def where_clause(self):
        localctx = DroltaParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_where_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(DroltaParser.WHERE)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 1073750024) != 0:
                self.state = 96
                self.where_statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1073750024) != 0:
                    self.state = 97
                    self.where_statement()
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Post_processing_statementsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def order_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Order_by_statementContext, 0)

        def group_by_statement(self):
            return self.getTypedRuleContext(DroltaParser.Group_by_statementContext, 0)

        def limit_statement(self):
            return self.getTypedRuleContext(DroltaParser.Limit_statementContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_post_processing_statements

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPost_processing_statements"):
                listener.enterPost_processing_statements(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPost_processing_statements"):
                listener.exitPost_processing_statements(self)

    def post_processing_statements(self):
        localctx = DroltaParser.Post_processing_statementsContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 16, self.RULE_post_processing_statements)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.order_by_statement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.group_by_statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.limit_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Order_by_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(DroltaParser.ORDER, 0)

        def BY(self):
            return self.getToken(DroltaParser.BY, 0)

        def VARIABLE(self):
            return self.getToken(DroltaParser.VARIABLE, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_order_by_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrder_by_statement"):
                listener.enterOrder_by_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrder_by_statement"):
                listener.exitOrder_by_statement(self)

    def order_by_statement(self):
        localctx = DroltaParser.Order_by_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_order_by_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DroltaParser.ORDER)
            self.state = 111
            self.match(DroltaParser.BY)
            self.state = 112
            self.match(DroltaParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Group_by_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(DroltaParser.GROUP, 0)

        def BY(self):
            return self.getToken(DroltaParser.BY, 0)

        def VARIABLE(self):
            return self.getToken(DroltaParser.VARIABLE, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_group_by_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGroup_by_statement"):
                listener.enterGroup_by_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGroup_by_statement"):
                listener.exitGroup_by_statement(self)

    def group_by_statement(self):
        localctx = DroltaParser.Group_by_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_group_by_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(DroltaParser.GROUP)
            self.state = 115
            self.match(DroltaParser.BY)
            self.state = 116
            self.match(DroltaParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Limit_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIMIT(self):
            return self.getToken(DroltaParser.LIMIT, 0)

        def INT_LITERAL(self):
            return self.getToken(DroltaParser.INT_LITERAL, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_limit_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLimit_statement"):
                listener.enterLimit_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLimit_statement"):
                listener.exitLimit_statement(self)

    def limit_statement(self):
        localctx = DroltaParser.Limit_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_limit_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(DroltaParser.LIMIT)
            self.state = 119
            self.match(DroltaParser.INT_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filter_statement(self):
            return self.getTypedRuleContext(DroltaParser.Filter_statementContext, 0)

        def predicate_statement(self):
            return self.getTypedRuleContext(DroltaParser.Predicate_statementContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_where_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhere_statement"):
                listener.enterWhere_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhere_statement"):
                listener.exitWhere_statement(self)

    def where_statement(self):
        localctx = DroltaParser.Where_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_where_statement)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.filter_statement()
                pass
            elif token in [13, 30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.predicate_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Filter_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return DroltaParser.RULE_filter_statement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class AndFilterContext(Filter_statementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a DroltaParser.Filter_statementContext
            super().__init__(parser)
            self.left = None  # Filter_statementContext
            self.right = None  # Filter_statementContext
            self.copyFrom(ctx)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def AND(self):
            return self.getToken(DroltaParser.AND, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def filter_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Filter_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Filter_statementContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAndFilter"):
                listener.enterAndFilter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAndFilter"):
                listener.exitAndFilter(self)

    class ComparisonFilterContext(Filter_statementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a DroltaParser.Filter_statementContext
            super().__init__(parser)
            self.left = None  # Token
            self.op = None  # Comparison_operatorContext
            self.right = None  # AtomContext
            self.copyFrom(ctx)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def VARIABLE(self):
            return self.getToken(DroltaParser.VARIABLE, 0)

        def comparison_operator(self):
            return self.getTypedRuleContext(DroltaParser.Comparison_operatorContext, 0)

        def atom(self):
            return self.getTypedRuleContext(DroltaParser.AtomContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterComparisonFilter"):
                listener.enterComparisonFilter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitComparisonFilter"):
                listener.exitComparisonFilter(self)

    class NotFilterContext(Filter_statementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a DroltaParser.Filter_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def NOT(self):
            return self.getToken(DroltaParser.NOT, 0)

        def filter_statement(self):
            return self.getTypedRuleContext(DroltaParser.Filter_statementContext, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNotFilter"):
                listener.enterNotFilter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNotFilter"):
                listener.exitNotFilter(self)

    class OrFilterContext(Filter_statementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a DroltaParser.Filter_statementContext
            super().__init__(parser)
            self.left = None  # Filter_statementContext
            self.right = None  # Filter_statementContext
            self.copyFrom(ctx)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def OR(self):
            return self.getToken(DroltaParser.OR, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def filter_statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Filter_statementContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Filter_statementContext, i)

